--- a/styles.scss
+++ b/styles.scss
@@ -1,14 +1,19 @@
+body{
+  -webkit-user-select:none;
+}
 #paint{
   border:2px solid black;
   height:500px;
   width:500px;
   margin:0 auto;
+  cursor:pointer;
 }
 .tools{
   display:inline-block;
   text-align:center;
   margin: 0 auto;
   width:100%;
+  cursor:pointer;
 }
 .black{
   background-color:black;
