--- a/compile.css
+++ b/compile.css
@@ -46,6 +46,13 @@ body {
   width: 80px;
   height: 20px; }
 
+.yellow {
+  background-color: yellow;
+  display: inline-block;
+  margin: 0 auto;
+  width: 80px;
+  height: 20px; }
+
 .clear {
   display: inline-block;
   margin: 0 auto;
